--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,19 @@
-html {
-    height: 100%;
-}
 body {
-    
-    height: 100%;
     background: url("../img/3489352.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    background-color: black;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+}
+@media only screen and (max-width: 767px) {
+    body {
+        background-image: url("../img/3489352-mobile.jpg");
+    }
 }
 canvas#c {
     position: absolute;
@@ -20,7 +21,7 @@ canvas#c {
     left: 0;
     z-index: -1;
 }
-}
+
 .audio {
     opacity: 0.5;
 }
