--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,10 @@ body {
     justify-content: flex-start;
     align-items: center;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 400px) {
     body {
         background-image: url("../img/3489352-mobile.jpg");
+        background-size: auto;
     }
 }
 canvas#c {
