--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
     justify-content: flex-start;
     align-items: center;
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-device-width: 480px) {
     body {
         background-image: url("../img/3489352-mobile.jpg");
         background-size: auto;
